Bug#32656 NDB: Duplicate key error aborts transaction in handler. Doesn't talk back to SQL